--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.2",
     "@reduxjs/toolkit": "^2.5.1",
+    "framer-motion": "^12.1.0",
+    "motion": "^12.1.0",
     "react": "^18.3.1",
+    "react-countdown": "^2.3.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-timer-hook": "^3.0.8",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2"
   },
